# art-gobblers-extras

./: .gitmodules
shuffles/: .gitignore  Cargo.toml  Readme.org  foundry.toml
shuffles/data/: shuffles.ipynb
shuffles/data/.ipynb_checkpoints/: shuffles-checkpoint.ipynb
shuffles/src/: MockGobbler.sol  node.rs  reveal.rs
