[package]
name = "gobbler-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.13.0"
eyre = "0.6.8"
tokio = { version = "1.19.2", features = ["full", "tracing"] }
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
k256 = "0.10.4"
hex = "0.4.3"
csv = "1.1.6"
rand = "0.8.5"

[[bin]]
name = "reveal"
path = "src/reveal.rs"
